[workspace]
resolver = "2"
members = [
  "crates/cyrune-core-contract",
  "crates/cyrune-control-plane",
  "crates/cyrune-runtime-cli",
  "crates/cyrune-daemon",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"

[workspace.lints.rust]
unsafe_code = "forbid"
