[package]
name = "cyrune-control-plane"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
adapter-resolver = { path = "../../Adapter/v0.1/0" }
crane-embed-null = { path = "../../CRANE-Kernel/v0.1/0/crates/crane-embed-null" }
crane-kernel = { path = "../../CRANE-Kernel/v0.1/0/crates/crane-kernel" }
crane-kernel-ref-inmem = { path = "../../CRANE-Kernel/v0.1/0/crates/crane-kernel-ref-inmem" }
crane-store-inmem = { path = "../../CRANE-Kernel/v0.1/0/crates/crane-store-inmem" }
cyrune-core-contract = { path = "../cyrune-core-contract" }
redb = "2.6.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
stoolap = { version = "0.4.0", default-features = false }
tokenizers = "0.22.2"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "parsing"] }
tract-onnx = "0.22.0"

[dev-dependencies]
tempfile = "3.14"

[lints]
workspace = true
