[package]
name = "cyrune-runtime-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
cyrune-core-contract = { path = "../cyrune-core-contract" }
cyrune-daemon = { path = "../cyrune-daemon" }
serde_json = "1"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting", "macros"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
