[workspace]
resolver = "2"
members = [
  "crates/crane-kernel",
  "crates/crane-embed-null",
  "crates/crane-store-inmem",
  "crates/crane-kernel-ref-inmem",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/<org-or-user>/crane-kernel"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Too noisy / not useful at this stage.
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_const_for_fn = "allow"
needless_pass_by_value = "allow"
must_use_candidate = "allow"
