[package]
name = "crane-kernel-ref-inmem"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
crane-kernel = { path = "../crane-kernel" }
crane-embed-null = { path = "../crane-embed-null" }
crane-store-inmem = { path = "../crane-store-inmem" }

[lints]
workspace = true

